# py_realpath

./: .gitignore  pyproject.toml
src/: rpath.py
tests/: test_rpath_cli.py
